--- a/stylesheets/jquery.covercase.css
+++ b/stylesheets/jquery.covercase.css
@@ -29,23 +29,23 @@
       display: inline-block;
       vertical-align: top; }
   .covercase-x .left {
-    background: url("images/covercase_arrows.png") 204px 68px;
+    background: url("../images/covercase_arrows.png") 204px 68px;
     top: 50%;
     left: 20px;
     margin-top: -34px; }
   .covercase-x .left:hover {
-    background: url("images/covercase_arrows.png") 204px 0px; }
+    background: url("../images/covercase_arrows.png") 204px 0px; }
   .covercase-x .left:active {
-    background: url("images/covercase_arrows.png") 204px 68px; }
+    background: url("../images/covercase_arrows.png") 204px 68px; }
   .covercase-x .right {
-    background: url("images/covercase_arrows.png") 68px 68px;
+    background: url("../images/covercase_arrows.png") 68px 68px;
     top: 50%;
     right: 20px;
     margin-top: -34px; }
   .covercase-x .right:hover {
-    background: url("images/covercase_arrows.png") 68px 0px; }
+    background: url("../images/covercase_arrows.png") 68px 0px; }
   .covercase-x .right:active {
-    background: url("images/covercase_arrows.png") 68px 68px; }
+    background: url("../images/covercase_arrows.png") 68px 68px; }
 
 .covercase-y {
   width: 204px;
@@ -58,20 +58,20 @@
     width: 220px;
     height: 100%; }
   .covercase-y .up {
-    background: url("images/covercase_arrows.png") 137px 68px;
+    background: url("../images/covercase_arrows.png") 137px 68px;
     top: 20px;
     left: 50%;
     margin-left: -34px; }
   .covercase-y .up:hover {
-    background: url("images/covercase_arrows.png") 137px 0px; }
+    background: url("../images/covercase_arrows.png") 137px 0px; }
   .covercase-y .up:active {
-    background: url("images/covercase_arrows.png") 137px 68px; }
+    background: url("../images/covercase_arrows.png") 137px 68px; }
   .covercase-y .down {
-    background: url("images/covercase_arrows.png") 0px 68px;
+    background: url("../images/covercase_arrows.png") 0px 68px;
     bottom: 20px;
     left: 50%;
     margin-left: -34px; }
   .covercase-y .down:hover {
-    background: url("images/covercase_arrows.png") 0px 0px; }
+    background: url("../images/covercase_arrows.png") 0px 0px; }
   .covercase-y .down:active {
-    background: url("images/covercase_arrows.png") 0px 68px; }
+    background: url("../images/covercase_arrows.png") 0px 68px; }
