--- a/stylesheets/jquery.covercase.css
+++ b/stylesheets/jquery.covercase.css
@@ -1,77 +1,104 @@
+/*
+ * JQuery Covercase Plugin 1.0
+ * https://github.com/sebasonic/covercase
+ *
+ * Copyright 2015, Sebastien Caillaud
+ * Released under the GNU GENERAL PUBLIC LICENSE Version 2
+ * https://github.com/sebasonic/covercase/blob/master/LICENSE
+ */
 .covercase-wrap {
-  position: relative;
-  border: 2px solid #777777;
-  border-radius: 6px;
-  overflow: hidden; }
-  .covercase-wrap .arrow {
+    position: relative;
+    border: 2px solid #777777;
+    border-radius: 6px;
+    overflow: hidden;
+}
+.covercase-wrap .arrow {
     position: absolute;
     width: 68px;
     height: 68px;
-    z-index: 2; }
-  .covercase-wrap .arrow:hover {
-    cursor: pointer; }
-
+    z-index: 2;
+}
+.covercase-wrap .arrow:hover {
+    cursor: pointer;
+}
 .covercase-x {
-  overflow: hidden;
-  height: 204px;
-  width: 100%;
-  max-width: 100%;
-  margin: 20px 0 20px 0; }
-  .covercase-x .covercase-list-wrap {
+    overflow: hidden;
+    height: 204px;
+    width: 100%;
+    max-width: 100%;
+    margin: 20px 0 20px 0;
+}
+.covercase-x .covercase-list-wrap {
     overflow-x: scroll;
     overflow-y: hidden;
-    height: 220px; }
-  .covercase-x .covercase {
+    height: 220px;
+}
+.covercase-x .covercase {
     display: inline-block;
     white-space: nowrap;
-    position: relative; }
-    .covercase-x .covercase > * {
-      display: inline-block;
-      vertical-align: top; }
-  .covercase-x .left {
-    background: url("covercase_arrows.png") 204px 68px;
+    position: relative;
+}
+.covercase-x .covercase > * {
+    display: inline-block;
+    vertical-align: top;
+}
+.covercase-x .left {
+    background: url("../images/covercase_arrows.png") 204px 68px;
     top: 50%;
     left: 20px;
-    margin-top: -34px; }
-  .covercase-x .left:hover {
-    background: url("covercase_arrows.png") 204px 0px; }
-  .covercase-x .left:active {
-    background: url("covercase_arrows.png") 204px 68px; }
-  .covercase-x .right {
-    background: url("covercase_arrows.png") 68px 68px;
+    margin-top: -34px;
+}
+.covercase-x .left:hover {
+    background: url("../images/covercase_arrows.png") 204px 0px;
+}
+.covercase-x .left:active {
+    background: url("../images/covercase_arrows.png") 204px 68px;
+}
+.covercase-x .right {
+    background: url("../images/covercase_arrows.png") 68px 68px;
     top: 50%;
     right: 20px;
-    margin-top: -34px; }
-  .covercase-x .right:hover {
-    background: url("covercase_arrows.png") 68px 0px; }
-  .covercase-x .right:active {
-    background: url("covercase_arrows.png") 68px 68px; }
-
+    margin-top: -34px;
+}
+.covercase-x .right:hover {
+    background: url("../images/covercase_arrows.png") 68px 0px;
+}
+.covercase-x .right:active {
+    background: url("../images/covercase_arrows.png") 68px 68px;
+}
 .covercase-y {
-  width: 204px;
-  height: 100%;
-  max-height: 100%;
-  margin: 20px; }
-  .covercase-y .covercase-list-wrap {
+    width: 204px;
+    height: 100%;
+    max-height: 100%;
+    margin: 20px;
+}
+.covercase-y .covercase-list-wrap {
     overflow-y: scroll;
     overflow-x: hidden;
     width: 220px;
-    height: 100%; }
-  .covercase-y .up {
-    background: url("covercase_arrows.png") 137px 68px;
+    height: 100%;
+}
+.covercase-y .up {
+    background: url("../images/covercase_arrows.png") 137px 68px;
     top: 20px;
     left: 50%;
-    margin-left: -34px; }
-  .covercase-y .up:hover {
-    background: url("covercase_arrows.png") 137px 0px; }
-  .covercase-y .up:active {
-    background: url("covercase_arrows.png") 137px 68px; }
-  .covercase-y .down {
-    background: url("covercase_arrows.png") 0px 68px;
+    margin-left: -34px;
+}
+.covercase-y .up:hover {
+    background: url("../images/covercase_arrows.png") 137px 0px;
+}
+.covercase-y .up:active {
+    background: url("../images/covercase_arrows.png") 137px 68px;
+}
+.covercase-y .down {
+    background: url("../images/covercase_arrows.png") 0px 68px;
     bottom: 20px;
     left: 50%;
-    margin-left: -34px; }
-  .covercase-y .down:hover {
-    background: url("covercase_arrows.png") 0px 0px; }
-  .covercase-y .down:active {
-    background: url("covercase_arrows.png") 0px 68px; }
+    margin-left: -34px;
+}
+.covercase-y .down:hover {
+    background: url("../images/covercase_arrows.png") 0px 0px;
+}
+.covercase-y .down:active {
+    background: url("../images/covercase_arrows.png") 0px 68px;
+}
